# million-porler-cow

./: README.md  package-lock.json  package.json
.github/workflows/: build-tauri.yml
src/: App.tsx  board.css  board.tsx  styles.css  tranp_card.css  tranp_card.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  porker.rs
